core/roboconf-core/src/test/resources/configurations/valid/complex-instances.instances
# 1st set of instances
instance of VM {
	name: i-vm-1;

	instance of Tomcat {
		name: i-tomcat;
		Tomcat.port: 9004;

		instance of WAR {
			name: i-war;
		}
	}
}

# 2nd set of instances
instance of VM {
	name: i-vm-2;
}

# 3rd set of instances
instance of VM {
	name: i-vm-3;

	instance of Tomcat {
		name: i-tomcat-1;
	}

	instance of Tomcat {
		name: i-tomcat-2;
		Tomcat.port: 9004;

		instance of WAR {
			name: i-war;
		}
	}
}
